Remove overflow:auto in .item to prevent scrollbar

--- a/css/adhiraj.css
+++ b/css/adhiraj.css
@@ -34,7 +34,6 @@ hr {
 /* Items */
 
 .item {
-  overflow: auto;
   margin-bottom: 20px;
 }
 .item-header > .item-desc {
